add warning when splitter priorities are found

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,21 @@
         "xstring": "cpp",
         "ostream": "cpp",
         "vector": "cpp"
-    }
+    },
+    "cSpell.words": [
+        "beltbalancer",
+        "ldemand",
+        "lsplitter",
+        "lsupply",
+        "outbuffer",
+        "outstring",
+        "rdemand",
+        "rnext",
+        "rsplitter",
+        "rsupply",
+        "tallcpu",
+        "tlocal",
+        "trandom",
+        "uncomp"
+    ]
 }
